# terraform-aws-docker-based-lambda

./: Dockerfile  README.md  build_docker_image.sh  compose.yml  docker-bake.hcl  pyproject.toml  terragrunt.hcl
.github/: dependabot.yml
.github/workflows/: ci.yml  lint-and-scan.yml
app/: main.py
docker/: Dockerfile  app.py  compose.yml  docker-compose.yml
envs/: root.hcl  terragrunt.hcl  version.tf
envs/dev/: env.hcl
envs/dev/cloudwatch/: terragrunt.hcl
envs/dev/docker/: .terraform.lock.hcl  terragrunt.hcl
envs/dev/ecr/: .terraform.lock.hcl  terragrunt.hcl
envs/dev/firehose/: terragrunt.hcl
envs/dev/kms/: terragrunt.hcl
envs/dev/lambda/: .terraform.lock.hcl  terragrunt.hcl
envs/dev/s3/: .terraform.lock.hcl  terragrunt.hcl
envs/dev/scheduler/: terragrunt.hcl
envs/dev/sqs/: .terraform.lock.hcl  terragrunt.hcl
modules/cloudwatch/: main.tf  outputs.tf  variables.tf
modules/docker/: local.tf  main.tf  outputs.tf  variables.tf  version.tf
modules/ecr/: local.tf  main.tf  outputs.tf  variables.tf  version.tf
modules/firehose/: local.tf  main.tf  outputs.tf  variables.tf
modules/kms/: main.tf  variables.tf  version.tf
modules/lambda/: local.tf  main.tf  outputs.tf  variables.tf  version.tf
modules/s3/: local.tf  main.tf  outputs.tf  variables.tf
modules/scheduler/: local.tf  main.tf  outputs.tf  variables.tf
modules/sqs/: main.tf  outputs.tf  variables.tf
src/: Dockerfile  main.py  requirements.txt
tests/: test_lambbda_invocation.py
